# react-native-pkce-challenge

./: .eslintrc.js  .gitignore  CHANGELOGS.md  CONTRIBUTING.md  LICENSE  README.md  UPGRADING.md  index.js  package.json  react-native-pkce-challenge.podspec  tsconfig.eslint.json  tsconfig.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: code_checks.yml  lint.yml  main.yml  tap.yml  test.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/davidangulo/randombytes/: RandomBytesModule.java  RandomBytesPackage.java
android/src/main/java/com/drophive/randombytes/: RandomBytesModule.java  RandomBytesPackage.java
android/src/main/java/com/pkcechallenge/: PkceChallengeManager.kt  PkceChallengeModule.java  PkceChallengeModule.kt  PkceChallengePackage.java  PkceChallengePackage.kt
cpp/: pkce-challenge.cpp  pkce-challenge.h  random-bytes.cpp  random-bytes.h  randombytes.c  randombytes.h  react-native-pkce-challenge.cpp  react-native-pkce-challenge.h
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: .xcode.env  .xcode.env.local  File.swift  Podfile
ios/: PkceChallenge.mm  RandomBytes.h  RandomBytes.mm
macos/: PkceChallenge.h  RandomBytes.m
src/: NativePkceChallenge.ts  async-pkce-challenge.js  async-random-bytes.expo.js  async-random-bytes.js  async-random-bytes.native.js  common.js  entry.native.ts  entry.ts  expo-modules.js  generate-random-bytes.native.ts  generate-random-bytes.ts  generate-random-bytes.web.ts  index.ts  index.tsx  is-expo.js  pkce-challenge.js  pkce-challenge.ts  random-bytes.js  sync-pkce-challenge.js  sync-random-bytes.expo.js  sync-random-bytes.js  sync-random-bytes.native.js  utils.ts
tests/: async-pkce-challenge.test.js  index.test.js  pkce-challenge.test.js  sync-pkce-challenge.test.js
(+26 files in other folders)
